--- a/aktualizowanieRenderowanegoElementu.html
+++ b/aktualizowanieRenderowanegoElementu.html
@@ -22,11 +22,21 @@
   </head>
   <body>
     <div id="box"></div>
-    <div id="content"></div>
-    <div id="embed"></div>
 
     <script type="text/babel">
-      
+      const newRoot = ReactDOM.createRoot(document.getElementById("box"));
+
+      function tick() {
+        const time = (
+          <div>
+            <h1>Hello world!</h1>
+            <h2>Actual Time in Warsaw: {new Date().toLocaleTimeString()}.</h2>
+          </div>
+        );
+        newRoot.render(time);
+      }
+
+      setInterval(tick, 1000);
     </script>
   </body>
 </html>
