--- a/egzamin.html
+++ b/egzamin.html
@@ -19,6 +19,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <div id="box"></div>
@@ -37,6 +38,10 @@
         e.preventDefault();
         const write = document.getElementById("imie");
         console.log(write.value);
+        const numberCourse = document.getElementById("number").value;
+        const writeCourse = courses.forEach((item) =>
+          console.log(courses[numberCourse - 1])
+        );
       }
 
       const Show = (props) => {
@@ -45,19 +50,21 @@
             <h2>Liczba kursów {props.course}</h2>
             <ol>{listCourse}</ol>
             <form onSubmit={getElement}>
-              <label>Imie i nazwisko</label>
+              <div id="content">
+                <label id="poleImie">Imie i nazwisko</label>
 
-              <input type="text" id="imie" />
+                <input type="text" id="imie" />
+              </div>
+              <div>
+                <label id="poleNumer">Numer kursu</label>
 
-              <label>Numer kursu</label>
-
-              <input
-                type="number"
-                id="number"
-                min="1"
-                max={props.course.length}
-              />
-
+                <input
+                  type="number"
+                  id="number"
+                  min="1"
+                  max={props.course.length}
+                />
+              </div>
               <input type="submit" value="Zapisz do kursu" />
             </form>
           </div>
